--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,9 +9,9 @@ updates:
       # Wildcards match zero or more arbitrary characters
       - dependency-name: "minimist"
       # Ignore some updates to the 'express' package
-      - dependency-name: "express"
-        # Ignore only new versions for 4.x and 5.x
-        versions: [ "4.x", "5.x" ]
-      # For all packages, ignore all patch updates
-      - dependency-name: "*"
-        update-types: [ "version-update:semver-patch" ]
+#      - dependency-name: "express"
+#        # Ignore only new versions for 4.x and 5.x
+#        versions: [ "4.x", "5.x" ]
+#      # For all packages, ignore all patch updates
+#      - dependency-name: "*"
+#        update-types: [ "version-update:semver-patch" ]
