--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,7 @@ updates:
       # Ignore updates to packages that start with 'aws'
       # Wildcards match zero or more arbitrary characters
       - dependency-name: "minimist"
+        versions: [ "0.x" ]
       # Ignore some updates to the 'express' package
 #      - dependency-name: "express"
 #        # Ignore only new versions for 4.x and 5.x
