--- a/package.json
+++ b/package.json
@@ -8,29 +8,17 @@
     "email": ""
   },
   "dependencies": {
-  },
-  "devDependencies": {
-    "grunt": "^1.6.1",
-    "grunt-angular-templates": "^1.2.0",
-    "grunt-cli": "^1.4.3",
-    "grunt-injector": "^1.1.0",
-    "grunt-autoprefixer": "^3.0.3",
-    "grunt-contrib-clean": "^2.0.1",
-    "grunt-contrib-concat": "^2.0.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "4.0.0",
-    "grunt-contrib-htmlmin": "^3.1.0",
-    "grunt-contrib-jshint": "^3.2.0",
-    "grunt-contrib-less": "^3.0.0",
-    "grunt-contrib-uglify": "^5.0.1",
-    "grunt-filerev": "^2.3.1",
-    "grunt-ng-annotate": "^4.0.0",
-    "grunt-text-replace": "^0.4.0",
-    "grunt-usemin": "^3.1.1",
-    "grunt-wiredep": "^3.0.1",
-    "jit-grunt": "^0.10.0",
-    "jshint-stylish": "^2.2.1",
-    "less-plugin-clean-css": "^1.5.1",
-    "time-grunt": "^1.3.0"
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-jshint": "^2.1.0",
+    "gulp-less": "^4.0.1",
+    "gulp-replace": "^1.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-usemin": "^0.3.29",
+    "gulp-util": "^3.0.8",
+    "jshint-stylish": "^2.2.1"
   }
 }
