--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "email": ""
   },
   "dependencies": {
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-jshint": "^2.1.0",
-    "gulp-less": "^4.0.1",
-    "gulp-replace": "^1.0.0",
-    "gulp-uglify": "^3.0.2",
-    "gulp-usemin": "^0.3.29",
-    "gulp-util": "^3.0.8",
-    "jshint-stylish": "^2.2.1"
+    "gulp": "latest",
+    "gulp-autoprefixer": "latest",
+    "gulp-clean-css": "latest",
+    "gulp-concat": "latest",
+    "gulp-htmlmin": "latest",
+    "gulp-jshint": "latest",
+    "gulp-less": "latest",
+    "gulp-replace": "latest",
+    "gulp-uglify": "latest",
+    "gulp-usemin": "latest",
+    "gulp-util": "latest",
+    "jshint-stylish": "latest"
   }
 }
